--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 .main-div{
     position: relative;
     width: 100%;
-    background:url('/images/backcover.svg');
+    background:url('./images/backcover.svg');
     background-position: right;
     background-repeat: no-repeat;
     background-size:contain;
